# fluent-cpp

./: .clang-format  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md  lexy_unicode_err.patch  test.cpp
fluent/: NOTICE
include/: ast.hpp  bundle.hpp  parser.hpp
include/fluent/: ast.hpp  bundle.hpp  loader.hpp  parser.hpp
src/: ast.cpp  bundle.cpp  embed.cpp  loader.cpp  parser.cpp
tests/: CMakeLists.txt  loader.cpp  main.cpp  parser.cpp  static.cpp  test.cpp  test.sh
tests/l10n/en/: main.ftl  other.ftl
